Change title and update footer details
Updated the title and footer information in index.html.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>My Store</title>
+<title>Southside exclusives</title>
 
 <style>
 *{box-sizing:border-box;margin:0;padding:0;font-family:Arial,sans-serif}
@@ -201,8 +201,14 @@ footer a:active{opacity:.6}
 </div>
 
 <footer>
-  Website designed & developed by
-  <a href="https://www.facebook.com/share/1Gg6tAmdQ1/" target="_blank" rel="noopener">mc</a>
+  <div style="font-size:13px; color:#555;">
+    Website designed & developed by 
+    <a href="https://www.facebook.com/share/18k53H5iw2/" target="_blank" rel="noopener">MC</a>
+  </div>
+  <div style="font-size:13px; color:#555; margin-top:4px;">
+    Website owned by 
+    <a href="https://www.facebook.com/share/1HTaEm1c1m/" target="_blank" rel="noopener">Southside exclusives</a>
+  </div>
 </footer>
 
 <script>
@@ -329,4 +335,4 @@ loadProducts();
 </script>
 
 </body>
-    </html>
+  </html>
